2008-03-10  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/28664
	* native/jni/java-math/Makefile.am: Add
	AM_LDFLAGS to the local LDFLAGS definition
	so gmp is linked.
	
2008-03-10  Andrew John Hughes  <gnu_andrew@member.fsf.org>

        PR classpath/35422
	* doc/api/Makefile.am: Include external/jsr166.
	
2008-03-10  Jim Meyering  <meyering@redhat.com>

	Don't leak upon failed realloc.
	* native/jni/classpath/jcl.c (JCL_realloc): Upon failed realloc,
	free the original buffer before throwing the exception.

2008-03-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/cp-hacking.texinfo: Fix some typos.
	* doc/cp-tools.texinfo: Likewise.
	* doc/cp-vmintegration.texinfo: Likewise.

2008-03-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/cp-hacking.texinfo: Fix spacing after periods.
	* doc/cp-tools.texinfo: Likewise.
	* doc/cp-vmintegration.texinfo: Likewise.

2008-03-05  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/reflect/Constructor.java:
	(cons): Make package-private.
	(Constructor(VMConstructor)): Set cons in
	VM interface.
	* java/lang/reflect/Field.java:
	(f): Make package-private.
	(Field(VMField)): Set f in VM interface.
	* java/lang/reflect/Method.java:
	(m): Make package-private.
	(Method(VMMethod)): Set m in VM interface.
	* vm/reference/java/lang/reflect/VMConstructor.java:
	(cons): Added reference to Constructor instance.
	* vm/reference/java/lang/reflect/VMField.java:
	(f): Added reference to Field instance.
	* vm/reference/java/lang/reflect/VMMethod.java,
	(m): Added reference to Method instance.

2008-03-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/reflect/AccessibleObject.java:
	(getAnnotation(Class)): Documented.
	(getAnnotations()): Likewise.
	(getDeclaredAnnotations()): Likewise.
	(isAnnotationPresent(Class)): Likewise.
	* java/lang/reflect/Constructor.java,
	* java/lang/reflect/Field.java,
	* java/lang/reflect/Method.java,
	* vm/reference/java/lang/reflect/VMConstructor.java,