@@ -1,3 +1,12 @@
+2008-03-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/awt/MouseInfo.java:
+	(MouseInfo()): Private constructor to prevent
+	instance creation.
+	* java/lang/AbstractStringBuilder.java:
+	(ensureCapacity_unsynchronized(int)): Make
+	package-private, not protected.
+	
 2008-03-10  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	PR classpath/28664
